gdb/ 	PR fortran/9806 	* dwarf2read.c (process_die <DW_TAG_module>, read_module) 	(scan_partial_symbols <DW_TAG_module>, add_partial_module): New.

gdb/testsuite/
	PR fortran/9806
	* gdb.fortran/module.exp, gdb.fortran/module.f90: New.